--- a/static/kj.html
+++ b/static/kj.html
@@ -112,7 +112,7 @@ img { margin:0px; padding:0px; }
   
 </tbody></table>
 <div style="clear:both"></div>
-<div class="bottom"><ul><li class="fleft"><strong>第<span id="nextqishu">61</span>期开奖时间：2020年<span id="nexttime">05月20日 21:31:00 星期三</span></strong></li></ul></div>
+<div class="bottom"><ul><li class="fleft"><strong>第<span id="nextqishu">62</span>期开奖时间：2020年<span id="nexttime">05月22日 21:31:00 星期五</span></strong></li></ul></div>
 <script>
   var last = 0; //显示计数
   var showit = 0;
