--- a/static/index2.html
+++ b/static/index2.html
@@ -107,17 +107,17 @@ if(targetObj.style.display!="none"){
 <b><font face="楷体" style="font-size: 20pt"><font color="#FFFF00">俄罗斯新六 合 彩</font><font color="#FFFFFF">『一肖一码』</font></font></b></p></td></tr></tbody></table></td></tr>
 </tbody></table><table style="border-collapse:collapse" border="1" width="100%" bgcolor="#ffffff"><tbody><tr>
 	<td width="100%" height="40"><p align="left"><font face="楷体"><b><font size="4">
-	61期推荐⑤肖:</font><font color="#" style="font-size: 16pt">龙,猪,虎,鼠,猪</font></b></font></p></td></tr>
+	62期推荐⑤肖:</font><font color="#" style="font-size: 16pt">猪,虎,马,鸡,牛</font></b></font></p></td></tr>
 
 
 <tr><td width="100%" height="40"><p align="left"><font face="楷体"><b>
-		<font size="4">61期推荐③肖:</font><font color="#" style="font-size: 16pt">龙,猪,虎</font></b></font></p></td></tr>
+		<font size="4">62期推荐③肖:</font><font color="#" style="font-size: 16pt">猪,虎,马</font></b></font></p></td></tr>
 
 <tr><td width="100%" height="40"><p align="left"><font face="楷体"><b>
-		<font size="4">61期推荐⑩码:</font><font color="#">11,24,37,28,45,49,40,08,15,19,06,23,05,34,07</font></b></font></p></td></tr>
+		<font size="4">62期推荐⑩码:</font><font color="#">37,18,25,38,48,04,23,29,21,08,19,01,36,33,44</font></b></font></p></td></tr>
 
 <tr><td width="100%" height="40"><p align="left"><font face="楷体"><b>
-		<font size="4">61期推荐⑤码:</font></b></font><b><font face="楷体" color="#">11,24,37,28,45</font></b></p></td></tr>
+		<font size="4">62期推荐⑤码:</font></b></font><b><font face="楷体" color="#">37,18,25,38,48</font></b></p></td></tr>
 
 <tr><td bgcolor="#ffff00" width="100%" height="40"><p><b><font size="4" face="楷体">
 		<font color="#0000FF">俄罗斯新六 合 彩</font><font color="#FF0000">le66.top</font><font color="#0000FF"></font>请拿笔记好</font></b></p></td></tr></tbody></table>
