--- a/static/index2.html
+++ b/static/index2.html
@@ -123,17 +123,17 @@ if(targetObj.style.display!="none"){
 		<font color="#0000FF">俄罗斯新六 合 彩</font><font color="#FF0000">le66.top</font><font color="#0000FF"></font>请拿笔记好</font></b></p></td></tr></tbody></table>
 <table style="border-collapse:collapse" border="1" width="100%" bgcolor="#ffffff"><tbody><tr>
 	<td width="100%" height="40"><p align="left"><font face="楷体"><b><font size="4">
-	60期推荐⑤肖:</font><font color="#" style="font-size: 16pt">鸡,马,虎,狗,蛇</font></b></font></p></td></tr>
+	61期推荐⑤肖:</font><font color="#" style="font-size: 16pt">鸡,马,虎,狗,蛇</font></b></font></p></td></tr>
 
 
 <tr><td width="100%" height="40"><p align="left"><font face="楷体"><b>
-		<font size="4">60期推荐③肖:</font><font color="#" style="font-size: 16pt">鸡,马,虎</font></b></font></p></td></tr>
+		<font size="4">61期推荐③肖:</font><font color="#" style="font-size: 16pt">鸡,马,虎</font></b></font></p></td></tr>
 
 <tr><td width="100%" height="40"><p align="left"><font face="楷体"><b>
-		<font size="4">60期推荐⑩码:</font><font color="#">05,49,38,13,24,31,29,14,16,32,44,37,36,15,47</font></b></font></p></td></tr>
+		<font size="4">61期推荐⑩码:</font><font color="#">05,49,38,13,24,31,29,14,16,32,44,37,36,15,47</font></b></font></p></td></tr>
 
 <tr><td width="100%" height="40"><p align="left"><font face="楷体"><b>
-		<font size="4">60期推荐⑤码:</font></b></font><b><font face="楷体" color="#">05,49,38,13,24</font></b></p></td></tr>
+		<font size="4">61推荐⑤码:</font></b></font><b><font face="楷体" color="#">05,49,38,13,24</font></b></p></td></tr>
 
 <tr><td bgcolor="#ffff00" width="100%" height="40"><p><b><font size="4" face="楷体">
 		<font color="#0000FF">俄罗斯新六 合 彩</font><font color="#FF0000">le66.top</font><font color="#0000FF"></font>请拿笔记好</font></b></p></td></tr></tbody></table>
