--- a/index2.html
+++ b/index2.html
@@ -1182,7 +1182,7 @@ table.in td a:hover { color: #FFF; font-size: 16px; border: 1px solid #CCC; back
 
 <!--挂牌图开始--> 
 <div class="box pad">
-<a target="_blank" href="./static/061(14).jpg"><img src="./static/061(14).jpg" width="100%"></a>
+<a target="_blank" href="./static/061(14).jpg"><img src="http://amxy.gaodada.net/liuhe/tk/sbx/062.jpg" width="100%"></a>
 
   <!--台湾玄机诗-->
 <div class="box pad" style="margin:0px;border:1px solid #000">
