--- a/index2.html
+++ b/index2.html
@@ -287,7 +287,7 @@ if(targetObj.style.display!="none"){
 </style>
 <div class="bizhong123 clearfix">
     <div class="bizhong123-box action-bz">
-<img src="./static/061.jpg" id="lfktzm">
+<img src="http://amxy.gaodada.net/liuhe/tk/tjb/062.jpg" id="lfktzm">
     </div>
     
 </div>
@@ -2198,8 +2198,8 @@ table td {
 <span style="font-family:Arial">
 
 
-<a target="_blank" href="./static/061(1).jpg"><img style="height:auto" src="./static/061(1).jpg" width="49%" border="0"></a>
-<a target="_blank" href="./static/061.jpg"><img style="height:auto" src="./static/061.jpg" width="49%" border="0"></a>
+<img style="height:auto" src="./static/061(1).jpg" width="49%" border="0">
+<img style="height:auto" src="http://amxy.gaodada.net/liuhe/tk/tjb/062.jpg" width="49%" border="0">
 
 
 </span>
