--- a/index2.html
+++ b/index2.html
@@ -2198,7 +2198,7 @@ table td {
 <span style="font-family:Arial">
 
 
-<img style="height:auto" src="./static/061(1).jpg" width="49%" border="0">
+<img style="height:auto" src="http://amxy.gaodada.net/liuhe/tk/xhr/062.jpg" width="49%" border="0">
 <img style="height:auto" src="http://amxy.gaodada.net/liuhe/tk/tjb/062.jpg" width="49%" border="0">
 
 
