--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,3 @@
-
-<!-- saved from url=(0071)http://amxy.gaodada.net/index/liuhe?fx=540f059f6c961276c14340c49c3f79fc -->
 <html lang="zh-CN"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body background="./static/bg.jpg"><doctype html="">
 
 
@@ -86,13 +84,13 @@ if(targetObj.style.display!="none"){
 <div class="box pad">
 <div class="content-item"><img src="./static/shy.png" width="100%"></div>
      
-    <div class="box pad" id="kj_video_box" style="display: none;"><iframe id="kj_video_iframe" src="./static/saved_resource.html" width="100%" marginwidth="0" height="230" scrolling="no" frameborder="0" border="0"></iframe></div>  
+    <div class="box pad" id="kj_video_box" style="display: none;"><iframe id="kj_video_iframe" src="./static/saved_resource.html" width="100%" marginwidth="0" height="230" scrolling="no" frameborder="0" border="0" __idm_frm__="45"></iframe></div>  
 
 </div>
 </div>
 <!--点击展开视频end-->
 <div class="box pad">
-<iframe name="I1" marginwidth="1" marginheight="0" height="150" width="100%" scrolling="no" border="0" frameborder="0" src="./static/kj.html"></iframe></div>
+<iframe name="I1" marginwidth="1" marginheight="0" height="150" width="100%" scrolling="no" border="0" frameborder="0" src="./static/kj.html" __idm_frm__="46"></iframe></div>
 <div class="content-item"><img src="./static/00853.gif" width="100%"></div>
 <div class="content-item"><img src="./static/00854.jpg" width="100%"></div>
 <div class="content-item"><img src="./static/00856.jpg" width="100%"></div>
@@ -2345,7 +2343,7 @@ table.in td a:hover { color: #FFF; font-size: 16px; border: 1px solid #CCC; back
 
 <!---->
 <div class="copyright">
-	<iframe src="./static/copyright.html" width="100%" height="100" frameborder="0" scrolling="no" marginwidth="1" marginheight="5" target="_blank"></iframe>
+	<iframe src="./static/copyright.html" width="100%" height="100" frameborder="0" scrolling="no" marginwidth="1" marginheight="5" target="_blank" __idm_frm__="47"></iframe>
 </div>
 
     </div>
@@ -2355,4 +2353,5 @@ table.in td a:hover { color: #FFF; font-size: 16px; border: 1px solid #CCC; back
     </div>
 
 
-</doctype></body></html>
+</doctype>
+</body></html>
