--- a/index2.html
+++ b/index2.html
@@ -84,13 +84,13 @@ if(targetObj.style.display!="none"){
 <div class="box pad">
 <div class="content-item"><img src="./static/shy.png" width="100%"></div>
      
-    <div class="box pad" id="kj_video_box" style="display: none;"><iframe id="kj_video_iframe" src="./static/saved_resource.html" width="100%" marginwidth="0" height="230" scrolling="no" frameborder="0" border="0" __idm_frm__="45"></iframe></div>  
+    <div class="box pad" id="kj_video_box" style="display: none;"><iframe id="kj_video_iframe" src="./static/saved_resource.html" width="100%" marginwidth="0" height="230" scrolling="no" frameborder="0" border="0" __idm_frm__="49"></iframe></div>  
 
 </div>
 </div>
 <!--点击展开视频end-->
 <div class="box pad">
-<iframe name="I1" marginwidth="1" marginheight="0" height="150" width="100%" scrolling="no" border="0" frameborder="0" src="./static/kj.html" __idm_frm__="46"></iframe></div>
+<iframe name="I1" marginwidth="1" marginheight="0" height="150" width="100%" scrolling="no" border="0" frameborder="0" src="./static/kj.html" __idm_frm__="50"></iframe></div>
 <div class="content-item"><img src="./static/00853.gif" width="100%"></div>
 <div class="content-item"><img src="./static/00854.jpg" width="100%"></div>
 <div class="content-item"><img src="./static/00856.jpg" width="100%"></div>
@@ -332,12 +332,15 @@ if(targetObj.style.display!="none"){
 </td></tr><tr>
 <td style="color:#000;font-family:微软雅黑;font-weight:700;border:2px solid #000" align="center" width="100%" height="50">
 <font size="3">
-<span style="color: #00F;">61期</span>:<span style="color: #800000;">精准杀肖</span>〖<span style="color: #F00;">狗,猴</span>〗开：<span style="background-color: #FFFF00; color: #F00;">? 0 ?</span></font></td></tr>
+<span style="color: #00F;">62期</span>:<span style="color: #800000;">精准杀肖</span>〖<span style="color: #F00;">鸡,兔</span>〗开：<span style="background-color: #FFFF00; color: #F00;">? 0 ?</span></font></td></tr><tr>
+<td style="color:#000;font-family:微软雅黑;font-weight:700;border:2px solid #000" align="center" width="100%" height="50">
+<font size="3">
+<span style="color: #00F;">61期</span>:<span style="color: #800000;">精准杀肖</span>〖<span style="color: #F00;">狗,猴</span>〗开：<span style="background-color: #FFFF00; color: #F00;">牛 48 准</span></font></td></tr>
 <!-----结束---->
 <tr>
 <td style="color:#000;font-family:微软雅黑;font-weight:700;border:2px solid #000" align="center" width="100%" height="50">
 <font size="3">
-<span style="color: #00F;">60期</span>:<span style="color: #800000;">精准杀肖</span>〖<span style="color: #F00;">虎,蛇</span>〗开：<span style="background-color: #FFFF00; color: #F00;">? 0 ?</span></font></td></tr>
+<span style="color: #00F;">60期</span>:<span style="color: #800000;">精准杀肖</span>〖<span style="color: #F00;">虎,蛇</span>〗开：<span style="background-color: #FFFF00; color: #F00;">虎 47 错</span></font></td></tr>
 <!-----结束---->
 <tr>
 <td style="color:#000;font-family:微软雅黑;font-weight:700;border:2px solid #000" align="center" width="100%" height="50">
@@ -390,6 +393,9 @@ if(targetObj.style.display!="none"){
 <table style="border-collapse:collapse;color:#000;font-weight:700;border:1px solid #000" border="1" width="100%">
 <tbody>
 <tr>
+<td style="color:#000;font-family:微软雅黑;font-weight:700;border:2px solid #000" align="center" width="100%" height="50">
+<font size="3">
+<span style="color: #00F;">61期</span>:<span style="color: #800000;">精准杀肖</span>〖<span style="color: #F00;">狗,猴</span>〗开：<span style="background-color: #FFFF00; color: #F00;">牛 48 准</span></font></td></tr><tr>
 <td style="text-align:center" height="60">
 <table border="1" width="100%" bgcolor="#ffffff"><tbody>
 <tr><td style="border:10px double #00f; height: 50px;" bgcolor="#0000FF"><p align="center">
@@ -397,6 +403,11 @@ if(targetObj.style.display!="none"){
 
 
   </td></tr><tr>
+<td style="color:#000;font-family:微软雅黑;font-weight:700;border:2px solid #000" align="center" width="100%" height="50">
+<font size="3">
+<span style="color: #00F;"><img src="/liuhe/images/jiang1.gif" width="25" height="25">62期</span>:<span style="color: #008000;">澳 门 新六 合 彩</span>〖<span style="color: #FF3300">15码中特</span>〗开:0-?-18,43,38,05,06,22,35,04,49,34,30,09,13,20,39<br>
+<font color="#FF0000"><img src="/liuhe/images/xhy1.gif" width="25" height="30">〖?〗</font></font></td></tr>
+<tr>
 <td style="color:#000;font-family:微软雅黑;font-weight:700;border:2px solid #000" align="center" width="100%" height="50">
 <font size="3">
 <span style="color: #00F;"><img src="./static/jiang1.gif" width="25" height="25">61期</span>:<span style="color: #008000;">俄罗斯新六 福 彩</span>〖<span style="color: #FF3300">15码中特</span>〗开:0-?-?<br>
@@ -479,7 +490,20 @@ if(targetObj.style.display!="none"){
 <table border="1" width="100%" bgcolor="#ffffff"><tbody>
 <tr><td style="border:10px double #00f" bgcolor="#0000FF" height="50"><p align="center">
 <b><font face="楷体" style="font-size: 20pt"><font color="#FFFF00">俄罗斯新六 福 彩</font><font color="#FFFFFF">『平特一肖』</font></font></b></p></td></tr></tbody></table>
-<!--开始-->
+<!--开始--><table style="border-collapse:collapse" border="1" width="100%" bgcolor="#ffffff"><tbody><tr>
+	<td width="100%" height="40"><p align="center"><font face="楷体"><b><font size="4">
+	<font color="#0000FF">62期</font>
+  <font color="#006600">平特一肖</font>
+  <font color="#0000FF">『</font>
+      <font color="#FF0000">猪猪猪</font>
+    <font color="#0000FF">』</font>开
+    <font color="#FF0000"><span style="background-color: #FFFFff">?-?-?-?-?-?-?  【?】</span></font>
+  </font></b></font></p>
+</td>
+</tr>
+</tbody>
+</table>
+
 <table style="border-collapse:collapse" border="1" width="100%" bgcolor="#ffffff"><tbody><tr>
 	<td width="100%" height="40"><p align="center"><font face="楷体"><b><font size="4">
 	<font color="#0000FF">61期</font>
@@ -2343,7 +2367,7 @@ table.in td a:hover { color: #FFF; font-size: 16px; border: 1px solid #CCC; back
 
 <!---->
 <div class="copyright">
-	<iframe src="./static/copyright.html" width="100%" height="100" frameborder="0" scrolling="no" marginwidth="1" marginheight="5" target="_blank" __idm_frm__="47"></iframe>
+	<iframe src="./static/copyright.html" width="100%" height="100" frameborder="0" scrolling="no" marginwidth="1" marginheight="5" target="_blank" __idm_frm__="51"></iframe>
 </div>
 
     </div>
@@ -2354,4 +2378,5 @@ table.in td a:hover { color: #FFF; font-size: 16px; border: 1px solid #CCC; back
 
 
 </doctype>
+
 </body></html>
